# Obscura

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.Docker.md  Security.MD  compose.yaml  obscura.toml
.claude/: CLAUDE.md
.context/: ARCHITECTURE.md  AUTH_SPEC.md  PROJECT.md  TASKS.md
.github/workflows/: build.yml
Artifacts/: AuditReport  BASELINE_LOAD_TEST_RESULTS.md  FEATURE_FEASIBILITY.md  FEATURE_SUBTASKS.md  SPEC.md
Meeting Notes/: MoM1
Weekly Progress/Week 1/: MoM1.md  Obscura 3045ad4e137d80ccb391f74ee0346e71.md
Weekly Progress/Week 2/: MoM2  MoM2.md  Status Report  Status Report.md
Weekly Progress/Week 3/: MoM3.md  Status Report.md
Weekly Progress/Week 4/: MoM4.md  Status Report.md
Weekly Progress/Week 5/: MoM5.md  Status Report.md
config/: Cargo.toml
config/src/: lib.rs
config/tests/: config_tests.rs
docs/: REPO_STRUCTURE.md
inference/: Cargo.toml
inference/src/: lib.rs  mapping.rs  ner.rs  redact.rs
inference/tests/: redact_tests.rs
load-testing/: load-test.js
ml/: BENCHMARKS.md  CLAUDE.md  GAMEPLAN.md  __init__.py  ast_parser.py  code_engine.py  compare_benchmarks.py  demo_onnx_inference.py  download_models.py  evaluate.py  export_onnx.py  external_ner_datasets.py  fewnerd_data.py  fine_tune.py  generate_synthetic_data.py  nemotron_data.py  ontonotes_data.py  pii_engine.py  pyproject.toml  regex_detector.py  requirements.txt  schemas.py  temporal_detector.py  train_code_model.py
ml/data/: hard_negative_business_benchmark.jsonl  synthetic.jsonl
ml/ml/data/: transcript_org_smoke.jsonl
ml/models/fine-tuned/checkpoints/checkpoint-125/: trainer_state.json
ml/models/fine-tuned/checkpoints/checkpoint-75/: config.json  trainer_state.json
ml/scripts/: generate_code_dataset.py
ml/tests/: __init__.py  test_code_engine.py  test_entity_thresholds.py  test_external_ner_datasets.py  test_pii_engine.py  test_redaction_config.py  test_regex_extensions.py  test_ssn_context.py
ml/web_demo/: app.py
ml/web_demo/templates/: index.html
proxy/: Cargo.toml
proxy/src/: main.rs
proxy/tests/: handler_logic_tests.rs  smoke_test.rs  smoke_tests.rs
scripts/: demo_obs16.py  deploy.sh  pull_from_runpod.sh  push_to_runpod.sh  runpod_train_phone.sh
src/: main.rs
src/inference/: CLAUDE.md
src/providers/: adapter.rs  mod.rs  openai.rs
tmp/: run_remote_web.py  verify_five_dataset_bundle.py  verify_long_transcript.py
verification/: .gitignore  OBS-13_plan.md  OBS-3-ssn-context_verification_report.md  OBS-3-ssn-context_verification_review.md  OBS-3-ssn-context_verification_review_round_2.md  OBS-3-ssn-context_verification_review_round_3.md  OBS-3_verification_report.md  OBS-3_verification_walkthrough.md  OBS-8_claude_implementation_prompt.md  OBS-8_gemini_verification_prompt.md  OBS-8_r3_review_report.md  OBS-8_verification_report.md  OBS_BACKEND_EXECUTION_PLAN.md
