[workspace]
members = [
    "config",
    "inference",
    "proxy",
]
resolver = "2"

[dependencies]
prometheus = "0.13"
once_cell = "1"
tokio = { version = "1.37", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

