[workspace]
members = [
    "proxy",
    "inference",
    "config"
]
resolver = "2"

[package]
name = "Obscura"
version = "0.1.0"
edition = "2024"

[dependencies]
prometheus = "0.13"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
