[workspace]
members = [
    "proxy",
    "inference",
    "config"
]
resolver = "2"

[workspace.dependencies]
prometheus = "0.13"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
