[package]
name = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ort = { version = "2", features = ["load-dynamic"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
