[package]
name = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.17"  # must match ort 2.0.0-rc.12's ndarray dependency
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
fancy-regex = "0.13"
