[project]
name = "obscura-ml"
version = "0.1.0"
description = "BERT-NER PII/PHI redaction engine for Obscura proxy"
requires-python = ">=3.11"

dependencies = [
    "transformers",
    "torch",
    "optimum",
    "onnxruntime",
    "scispacy",
    "datasets",
    "seqeval",
    "psutil",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "faker",
    "ruff",
    "black",
    "pytest",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
target-version = ["py311"]
line-length = 88
