[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
inference = { path = "../inference" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
