[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
inference = { path = "../inference" }
tokio = {workspace = true}
hyper = {workspace = true}
hyper-util = {workspace = true}
http-body-util = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
serde_json = "1"
